<resources>
    <string name="app_name" translatable="false">TestUI</string>
    <string name="vpn_detected">VPN Detected!</string>
    <string name="a_vpn_connection_has_been_detected_on_your_device_disable_the_vpn_connection_before_proceeding_to_ensure_security">A VPN connection has been detected on your device. Disable the VPN connection before proceeding to ensure security</string>
    <string name="okay">Okay</string>
    <string name="welcome_to_fino_payments_bank">Welcome to Fino Payments bank</string>
    <string name="existing_customer_login">Existing Customer? Login</string>
    <string name="start_banking_with_us_by_login_to_finopay_app">Start banking with us by login to FinoPay App.</string>
    <string name="new_to_bank_open_an_account">New to Bank? Open an Account</string>
    <string name="instant_account_opening_earn_while_you_spend_personalized_debit_card_amp_so_on"><![CDATA[Instant account opening, earn while you spend, Personalized debit card & so on.]]></string>
    <string name="verify_mobile_number">Verify Mobile Number</string>
    <string name="send_sms">Send SMS</string>
    <string name="please_send_us_the_pre_composed_sms_to_verify_your_mobile_number">Please send us the pre-composed SMS to verify your mobile number</string>
    <string name="if_you_have_dual_sim">If you have Dual SIM</string>
    <string name="select_sim_linked_to_your_aadhaar_card">Select SIM linked to your Aadhaar card</string>
    <string name="standard_sms_charges_may_apply">Standard SMS Charges may apply</string>
    <string name="this_may_take_a_few_seconds_please_don_t_exit_the_app_or_press_the_back_button">This may take a few seconds. Please don\'t exit the app or press the back button.</string>
    <string name="_is_linked_to_a_finopay_account">is linked to a FinoPay account.</string>
    <string name="please_wait_while_we_verify_your_mobile_number">Please wait while we verify your mobile number</string>
    <string name="redirecting">Redirecting</string>
    <string name="switch_sim">Switch SIM</string>
    <string name="open_account">Open Account</string>
    <string name="digital_account_opening">Digital Account Opening</string>
    <string name="skip">Skip</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="enter_referral_code_optional">Enter Referral Code (Optional)</string>
    <string name="enter_referee_mobile_number">Enter referee mobile number</string>
    <string name="enable_sweep_account">Enable sweep account</string>
    <string name="i_hearby_give_my_consent_to_finopayments_bank_to_enable_my_sweep_account_facility_with_suryoday_small_finance_bank_ssfb_linked_with_my_fino_bank_account_i_also_provide_my_explicit_consent_to_finopayments_bank_to_share_my_kyc_information_with_ssfb">I hearby give my consent to FinoPayments Bank to enable my sweep account facility with Suryoday Small Finance Bank (SSFB) linked with my Fino Bank account. I also provide my explicit consent to FinoPayments Bank to share my KYC information with SSFB</string>
    <string name="get_otp">Get OTP</string>
    <string name="validate_your_identity">Validate Your Identity</string>
    <string name="welcome">Welcome</string>
    <string name="you_re_already_one_of_our_valued_customers">You’re already one of our valued customers</string>
    <string name="register_on_the_finopay_app_now_and_experience_the_future_of_digital_banking">Register on the FinoPay App now and experience the future of digital banking.</string>
    <string name="register_now">Register Now</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="mins">Mins</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="we_will_send_you_an_otp_to_verify_your_email_id">We will send you an OTP to verify your Email ID</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="email_id_already_registered">Email ID already registered!</string>
    <string name="enter_your_aadhaar_and_pan_details">Enter your Aadhaar and PAN Details</string>
    <string name="enter_aadhaar_number">Enter Aadhaar number*</string>
    <string name="enter_pan_number">Enter PAN number*</string>
    <string name="politically_exposed_person">Politically exposed person</string>
    <string name="use_aadhaar_for_payments_aeps">Use Aadhaar for Payments (AePS)</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="fatca_declaration">FATCA Declaration</string>
    <string name="i_hereby_provide_my_consent_to_fino_payments_bank_to_fetch_my_kyc_details_using_aadhaar_from_uidai_and_validate_my_pan_from_nsdl_for_the_purpose_of_account_opening_i_have_not_opened_aadhaar_otp_based_account_with_any_other_bank_in_india_and_will_not_apply_for_it_in_future_as_well_i_give_my_consent_to_download_my_kyc_records_from_the_central_kyc_registry_ckycr_only_for_the_purpose_of_verification_of_my_identity_and_address_from_the_database_of_ckycr_registry">I hereby provide my consent to Fino Payments Bank to fetch my KYC details using Aadhaar from UIDAI and validate my PAN from NSDL for the purpose of account opening. I have not opened Aadhaar OTP based account with any other bank in India and will not apply for it in future as well I, give my consent to download my KYC Records from the Central KYC Registry (CKYCR), only for the purpose of verification of my identity and address from the database of CKYCR Registry.</string>
    <string name="i_hereby_give_my_explicit_consent_to_fino_payments_bank_for_enabling_aeps_debit_service_in_my_account_i_confirm_that_the_aeps_product_features_along_with_terms_and_conditions_have_been_explained_to_me_in_detail_and_i_agree_to_all_the_terms_and_conditions">I hereby give my explicit consent to Fino Payments Bank for Enabling Aeps Debit Service in my account. I confirm that the Aeps product features along with terms and conditions have been explained to me in detail and I agree to all the terms and conditions.</string>
    <string name="aadhaar_and_pan_not_linked">Aadhaar and PAN not linked</string>
    <string name="aadhaar_and_pan_not_linked_descr">Your PAN is not linked to your Aadhaar. Please visit the nearest branch or merchant point to open an account</string>
    <string name="aadhaar_otp_account_already_exists">Aadhaar OTP account already exists!</string>
    <string name="aadhaar_otp_account_already_exists_descr">It seems that you already have an Aadhaar OTP based account with other bank, Kindly visit the nearest merchant point to open an account with us</string>
    <string name="go_to_branch_locater">Go to Branch Locator</string>
    <string name="politically_exposed_person_descr">Dear customer, this account opening journey is not applicable for politically exposed person. By clicking on yes, you confirm that you belong to politically exposed group and you will not be allowed to proceed with the journey</string>
    <string name="mobile_number_mismatch_with_aadhaar">Mobile number mismatch with Aadhaar!</string>
    <string name="mobile_number_mismatch_with_aadhaar_descr">There is a mismatch in the mobile number entered and Aadhaar linked mobile number</string>
    <string name="verify_aadhaar_otp">Verify Aadhaar OTP</string>
    <string name="verify_aadhaar_otp_descr">Enter the OTP sent to your Aadhaar registered mobile number</string>
    <string name="add_review_details">Add &amp; Review Details</string>
    <string name="personal_details">Personal Details</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="nationality">Nationality</string>
    <string name="indian">Indian</string>
    <string name="father_s_husband_s_name">Father\'s / Husband\'s name</string>
    <string name="permanent_address_as_per_aadhaar">Permanent address as per Aadhaar</string>
    <string name="communication_address">Communication address</string>
    <string name="same_as_permanent_address">Same as permanent address</string>
    <string name="name_as_per_pan">Name as per PAN*</string>
    <string name="dob">DOB*</string>
    <string name="mother_s_maiden_name">Mother\'s maiden name*</string>
    <string-array name="marital_status">
        <item>Married</item>
        <item>Single</item>
        <item>Divorced</item>
        <item>Widowed</item>
    </string-array>
    <string name="save_and_proceed">Save and proceed</string>
    <string name="professional_details">Professional Details</string>
    <string-array name="education_qualification">
        <item>Select</item>
    </string-array>
    <string-array name="occupation">
        <item>Select</item>
    </string-array>
    <string name="annual_income">Annual Income*</string>
    <string name="lakhs">lakhs</string>
    <string name="nominee_details_optional">Nominee details (optional)</string>
    <string name="as_per_rbi_guidelines_it_is_recommended_to_add_a_nominee_for_financial_security">As per RBI guidelines, it is recommended to add a nominee for financial security</string>
    <string name="nominee_name">Nominee name*</string>
    <string name="enter_nominee_s_name">Enter nominee\'s name</string>
    <string name="date_of_birth">Date of birth*</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="relationship_with_account_holder">Relationship with account holder*</string>
    <string name="nominee_address_same_as_customer_address">Nominee address same as customer address</string>
    <string name="nominee_address">Nominee Address*</string>
    <string name="guardian_details">Guardian Details</string>
    <string name="guardian_name">Guardian Name*</string>
    <string name="relation_with_nominee">Relation with nominee*</string>
    <string name="guardian_dob">Guardian DOB*</string>
    <string name="guardian_address_same_as_customer_address">Guardian address same as customer address</string>
    <string name="guardian_address">Guardian Address*</string>
    <string name="pin_code">PIN code*</string>
    <string name="state_union_territory">State/Union territory*</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="congratulations">Congratulations!</string>
    <string name="your_e_kyc_and_pan_verification_has_been_done">Your e-KYC and PAN verification has been done</string>
    <string name="info">Info</string>
    <string name="info_communication_address_descr">Dear Customer, if your communication address is different from permanent address, kindly visit our Merchant Point to open an account</string>
    <string name="continue_with_permanent_address">Continue with permanent address</string>
    <string name="locate_nearest_merchant_point">Locate nearest Merchant Point</string>
    <string name="select_duration">Select duration</string>
    <string name="current_month">Current month</string>
    <string name="last_3_months">Last 3 months</string>
    <string name="last_6_months">Last 6 months</string>
    <string name="last_year">Last year</string>
    <string name="select_dates">Select dates</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="product_id">Product ID</string>
    <string name="description_5_gram_safegold_bar_99_99">Description : 5 gram safegold bar(99.99%)</string>
    <string name="metal_weight">Metal Weight</string>
    <string name="brand_name">Brand name</string>
    <string name="type_of_metal">Type of metal</string>
    <string name="making_charges">Making charges</string>
    <string name="deliver_gold_info_descr">. Safegold coins are set in 24 Karat yellow gold \n\n.Guaranteed weight and purity: specially manufactured in state of the art facilities, with zero negative tolerance for weight and purity.\n\n.Sealed in international quality packaging with a unique serial number, ensures foolproof quality and complete traceability for each coin</string>
    <string name="highlights">Highlights</string>
</resources>