<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

  <ImageView
      android:id="@+id/info_image"
      android:layout_width="140dp"
      android:layout_height="140dp"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="30dp"
      android:src="@drawable/info_image"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        style="@style/WorkSansSemiBold"
        android:text="@string/info"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:textColor="@color/gray"
        style="@style/WorkSansRegular"
        android:layout_marginHorizontal="20dp"
        android:textAlignment="center"
        android:text="@string/info_communication_address_descr"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/info_button_primary"
        style="@style/SolidButton"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/continue_with_permanent_address"
        android:textSize="16sp"
         />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/info_button_secondary"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/primary"
        android:textAppearance="@style/WorkSansSemiBold"
        android:text="@string/locate_nearest_merchant_point"
        android:textSize="14sp"
        android:layout_marginBottom="10dp" />


</LinearLayout>