<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="14dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/WorkSansSemiBold"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:visibility="visible"
                android:text="@string/let_s_get_started"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/WorkSansRegular"
                android:textColor="@color/gray"
                android:textSize="14sp"
                android:visibility="visible"
                android:text="@string/mobile_number"
                android:layout_marginTop="14dp"/>
            
            <EditText
                android:id="@+id/mobile_number"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="@drawable/text_field_bg"
                android:inputType="phone"
                style="@style/WorkSansRegular"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/WorkSansRegular"
                android:textColor="@color/gray"
                android:textSize="14sp"
                android:visibility="visible"
                android:text="@string/enter_referral_code_optional"
                android:layout_marginTop="14dp"/>

            <EditText
                android:id="@+id/referral_code"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="8dp"
                android:inputType="phone"
                style="@style/WorkSansRegular"

                android:background="@drawable/text_field_bg" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/WorkSansRegular"
                android:textColor="@color/gray"
                android:textSize="12sp"
                android:text="@string/enter_referee_mobile_number"
                android:layout_marginTop="4dp"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="match_parent"
                android:checked="true"
                style="@style/WorkSansMedium"
                android:textColor="@color/black"
                app:buttonTint="@color/finoBlue"
                android:text="@string/enable_sweep_account"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#333333"
                style="@style/WorkSansRegular"
                android:layout_marginStart="34dp"
                android:layout_marginTop="-16dp"
                android:text="@string/i_hearby_give_my_consent_to_finopayments_bank_to_enable_my_sweep_account_facility_with_suryoday_small_finance_bank_ssfb_linked_with_my_fino_bank_account_i_also_provide_my_explicit_consent_to_finopayments_bank_to_share_my_kyc_information_with_ssfb"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/send_sms"
                style="@style/SolidButton"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/get_otp"
                android:textSize="16sp"
                />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</ScrollView>