<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="@string/use_aadhaar_for_payments_aeps"
        style="@style/WorkSansSemiBold"/>

    <TextView
        android:id="@+id/message_subtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:textColor="@color/gray"
        android:textSize="13sp"
        android:text="@string/i_hereby_give_my_explicit_consent_to_fino_payments_bank_for_enabling_aeps_debit_service_in_my_account_i_confirm_that_the_aeps_product_features_along_with_terms_and_conditions_have_been_explained_to_me_in_detail_and_i_agree_to_all_the_terms_and_conditions"
        style="@style/WorkSansRegular"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/okay"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        style="@style/OutlinedButton"
        app:strokeWidth="1dp"
        android:text="@string/okay"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        />

</LinearLayout>