<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/WorkSansBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/select_duration"
            android:textAllCaps="false"
            android:textColor="@color/text_color_black"
            android:textSize="16sp" />

        <TextView
            style="@style/WorkSansSemiBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/current_month"
            android:textAllCaps="false"
            android:textColor="@color/text_color_black"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_marginTop="4dp"
            android:background="@color/separator_grey" />

        <TextView
            style="@style/WorkSansSemiBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/last_3_months"
            android:textAllCaps="false"
            android:textColor="@color/text_color_black"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_marginTop="4dp"
            android:background="@color/separator_grey" />

        <TextView
            style="@style/WorkSansSemiBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/last_6_months"
            android:textAllCaps="false"
            android:textColor="@color/text_color_black"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_marginTop="4dp"
            android:background="@color/separator_grey" />

        <TextView
            style="@style/WorkSansSemiBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/last_year"
            android:textAllCaps="false"
            android:textColor="@color/text_color_black"
            android:textSize="12sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_marginTop="4dp"
            android:background="@color/separator_grey" />

        <TextView
            style="@style/WorkSansSemiBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/select_dates"
            android:textAllCaps="false"
            android:textColor="@color/text_color_black"
            android:textSize="12sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>