<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="14dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/WorkSansSemiBold"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:visibility="visible"
                android:text="@string/let_s_get_started"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/WorkSansRegular"
                android:textColor="@color/gray"
                android:textSize="14sp"
                android:visibility="visible"
                android:text="@string/we_will_send_you_an_otp_to_verify_your_email_id"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/WorkSansRegular"
                android:textColor="@color/gray"
                android:textSize="14sp"
                android:visibility="visible"
                android:text="@string/enter_email_id"
                android:layout_marginTop="14dp"/>

            <EditText
                android:id="@+id/email_id"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="@drawable/text_field_bg"
                android:inputType="textEmailAddress"
                style="@style/WorkSansRegular"
                android:paddingStart="10dp"
                android:layout_marginTop="8dp"/>




            <com.google.android.material.button.MaterialButton
                android:id="@+id/send_sms"
                style="@style/SolidButtonDisabled"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/get_otp"
                android:textSize="16sp"
                />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</ScrollView>